<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">数字粮库</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="system_manage">系统管理</string>
    <string name="retreat">收卡退港</string>
    <string name="help">帮助</string>
    <string name="unconnection_or_connection">未连接/已连接</string>
    <string name="system_config">系统配置</string>
    <string name="login">登录</string>
    <string name="sync_data">同步数据</string>
    <string name="exit">退出</string>
    <string name="register_vehicle_work">登记车辆作业</string>
    <string name="adjust_quality_info">调整扣量扣价</string>
    <string name="tasking">处理扦样任务</string>
    <string name="tasked">已处理扦样信息</string>
    <string name="register_sample">登记样品</string>
    <string name="regist_weighing_weight">登记称重重量</string>
    <string name="storehouse_warehouse">值仓仓库</string>
    <string name="storehouse">值仓</string>
    <string name="read_card">读卡</string>
    <string name="warehouse">仓库</string>
    <string name="varieties">品种</string>
    <string name="license_plate">车牌</string>
    <string name="owners">货主</string>
    <string name="type">类型</string>
    <string name="link">环节</string>
    <string name="gross_weight">毛重</string>
    <string name="tare">皮重</string>
    <string name="net_weigth">净重</string>
    <string name="deduction">扣量</string>
    <string name="prompt">提示</string>
    <string name="close">关闭</string>
    <string name="start_sync">开始同步</string>
    <string name="basic_data_classify">基础数据分类</string>
    <string name="basic_data_classify_name">基础数据分类名称</string>
    <string name="warehouse_info">"仓库信息"</string>
    <string name="business_type">"业务种类"</string>
    <string name="grain_type">"粮食品种"</string>
    <string name="quality_index">"化验指标"</string>
    <string name="acount_info">"用户信息"</string>
    <string name="all_selected">"全选"</string>
    <string name="send">"发送"</string>
    <string name="capacity">"仓容"</string>
    <string name="change">"修改"</string>
    <string name="ton">"吨"</string>
    <string name="grain_kind">品种</string>
    <string name="total_quantity">"库存"</string>
    <string name="grain_attribute">"性质"</string>
    <string name="owner">"所属"</string>
    <string name="acquisition_stock_in">"收购入库"</string>
    <string name="sell_stock_out">"销售出库"</string>
    <string name="warehouse_full">"仓库已满"</string>
    <string name="warehouse_empty">"仓库已空"</string>
    <string name="storehouse_message">"值仓消息"</string>
    <string name="legal">"合法"</string>
    <string name="regist">"登记"</string>
    <string name="deduction_discount">"扣量扣价"</string>
    <string name="loading_finish">"本次装卸完毕"</string>
    <string name="loading_unfinish_change_warehouse">"本次装卸未完，需换仓"</string>
    <string name="loading_unfinish_need_assay">"本次装卸未完，需重新化验"</string>
    <string name="ajust_warehouse">"调整仓库"</string>
    <string name="moisture_deduction">"水分扣量"</string>
    <string name="impurity_deduction">"杂质扣量"</string>
    <string name="clear_sundry_fees">"扣清杂费"</string>
    <string name="deduct_drying_fees">"扣整晒费"</string>
    <string name="kilogram_percent">"千克/%"</string>
    <string name="yuan_percent">"元/%"</string>
    <string name="yuan">"元"</string>
    <string name="percent">"%"</string>
    <string name="add_deduction">"加扣"</string>
    <string name="save_deduction_discount">"保存扣量扣价"</string>
    <string name="Date">"日期"</string>
    <string name="NetWeight_KG">"净重(千克)"</string>
    <string name="Deduction_KG">"扣量(千克)"</string>
    <string name="Login_User">"用户名称"</string>
    <string name="Login_Password">"用户密码"</string>
    <string name="Sava_User_Password">"保存用户名和密码"</string>
    <string name="Login">"登录"</string>
    <string name="Cancel">"取消"</string>
    <string name="Login_Failed">"网络连接失败，请连接网络后再登录!"</string>
    <string name="User_Password_Empty">"用户名或密码为空!"</string>
    <string name="Net_Settings">"网络参数设置"</string>
    <string name="Server_Config">"服务器配置"</string>
    <string name="Communication">"通信"</string>
    <string name="Net_Type">"联网"</string>
    <string name="Server_URL_Address">"服务器URL地址"</string>
    <string name="S">"秒"</string>
    <string name="Communication_Time_Out">通信超时</string>
    <string name="Server_Port">服务器端口</string>
    <string name="Queue_Name">队列的名称</string>
    <string name="Message_Cross_ID">消息交叉ID</string>
    <string name="Device_Number">设备编号</string>
    <string name="Save">保存</string>
    <string name="Close">关闭</string>
    <string name="Advance">高级</string>
    <string name="RFID_Config">RFID读写器配置</string>
    <string name="Type">型号</string>
    <string name="Platform">平台</string>
    <string name="Power">功率</string>
    <string name="Port">端口</string>
    <string name="Select_Communication">"请选择通信方式:"</string>
    <string name="Select_Net_Type">"请选择联网类型:"</string>
    <string name="Select_Type">请选择型号:</string>
    <string name="Select_Platform">请选择平台:</string>
    <string name="Select_Power">请选择功率:</string>
    <string name="Select_Port">请选择端口:</string>
    <string name="IP_Invalid">IP格式错误</string>
    <string name="Tips">提示</string>
    <string name="Save_Success">保存成功</string>
    <string name="Read_Card_Login">读卡登录</string>
    <string name="Index_ID">指标项</string>
    <string name="Index_Value">化验值</string>
    <string name="More">查看更多...</string>
    <string name="Clear_Password">清除</string>
    <string name="Query_Warehouse_Info">查询仓库信息</string>
    <string name="Set_Warehouse_Msg">设置值仓消息</string>
    <string name="Query_In_Out">出入库信息查询</string>
    <string name="kilogram">千克</string>
    <string name="title">粮库手持机软件系统</string>
    <string name="copyright">Copyright@航天信息股份有限公司</string>
    <string name="version_name">1.0.1</string>
    <string name="weight_kg">重量(单位:千克)</string>
    <string name="confirm_weight">确认重量</string>
    <string name="recaculate">重新计算</string>
    <string name="weight">重量</string>
    <string name="owner_name">货主姓名</string>
    <string name="plate">牌照</string>
    <string name="task_kind">扦样品种</string>
    <string name="newest_task">最新任务</string>
    <string name="process_task">处理任务</string>
    <string name="warehouse_exception">"仓库信息异常"</string>
    <string name="create_date">"创建日期"</string>
    <string name="task_date">"任务日期"</string>
    <string name="enroll_number">"报港编号"</string>
    <string name="sample_count">"样品数量"</string>
    <string name="sample_type">"样品品种"</string>
    <string name="sample_number">"样品编号"</string>
    <string name="vehicle_plate">"车船牌照"</string>
    <string name="query">"查找"</string>
    <string name="print">"打印"</string>
    <string name="software_update">软件更新</string>
    <string name="update_server_ip">"192.168.8.26"</string>
    <string name="update_server_port">"8080"</string>
    <string name="update_server_check_path">"/TerminalMonitor/GrainSysCheckServlet"</string>
    <string name="update_server_download_path">"/TerminalMonitor/GrainSysDownloadServlet"</string>
</resources>