<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="40dp"
    android:background="@drawable/login_background">
    
	<EditText 
	    android:id="@+id/login_et_login_user"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/Login_User"
	    android:background="@null"
	    android:layout_marginTop="110dp"
	    android:singleLine="true"/>
	
	<EditText 
	    android:id="@+id/login_et_login_password"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:inputType="textPassword"
	    android:hint="@string/Login_Password"
	    android:layout_below="@id/login_et_login_user"
	    android:background="@null"
	    android:layout_marginTop="35dp"
	    android:singleLine="true"/>
   
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right"
        android:layout_below="@id/login_et_login_password"
        android:layout_marginTop="10dp">
		<CheckBox 
		    android:id="@+id/login_cb_save"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"/>
		<TextView 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/Sava_User_Password"/>
    </LinearLayout>
    
   	<Button 
	    style="@style/CornerButton"
	    android:id="@+id/login_btn_read_card_login"
	    android:layout_height="wrap_content"
	    android:layout_width="fill_parent"
	    android:text="@string/Read_Card_Login"
	    android:layout_alignParentBottom="true"/>
   	
   	<Button 
	    style="@style/CornerButton"
	    android:id="@+id/login_btn_login"
	    android:layout_height="wrap_content"
	    android:layout_width="fill_parent"
	    android:text="@string/Login"
	    android:layout_above="@id/login_btn_read_card_login"
	    android:layout_marginBottom="10dp"/>
    
    <Button 
	    android:id="@+id/login_btn_clear"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/Clear_Password"
	    android:visibility="gone"/>
</RelativeLayout>