<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/background">
    
    <LinearLayout 
        android:id="@+id/tasked_ll_bottom"
    	android:layout_alignParentBottom="true"
        android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_margin="5dp">
        
	    <Button 
		    style="@style/CornerButton"
		    android:id="@+id/tasked_btn_more"
		    android:layout_width="fill_parent"
		    android:layout_weight="10"
		    android:layout_height="wrap_content"
		    android:layout_marginRight="1dp"
		    android:text="@string/More"/>
	    
		<Button 
		    style="@style/CornerButton"
		    android:id="@+id/tasked_btn_print"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="10"
		    android:layout_marginLeft="1dp"
		    android:text="@string/print"/>
	    
		<Button 
		    style="@style/CornerButton"
		    android:id="@+id/tasked_btn_close"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="10"
		    android:layout_marginLeft="1dp"
		    android:text="@string/close"/>
			
    </LinearLayout>
    
    
    <TextView
        android:id="@+id/tasked_tv_title"
        android:layout_alignParentTop="true"
        style="@style/TextViewTitle"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/tasked"/>
    
    <LinearLayout 
        android:id="@+id/tasked_ll"
        android:layout_above="@id/tasked_ll_bottom"
        android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		
		<LinearLayout
	        android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="1">
	    
		    <TextView 
		      	android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/plate" 
			    android:layout_margin="3dp"/>
		    <EditText
		        android:id="@+id/tasked_et_plate"
		      	android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    style="@style/EditTextBackGround"
			    android:layout_margin="3dp"/>
		</LinearLayout>		
		<Button 
	        style="@style/CornerButton"
	        android:id="@+id/tasked_btn_query"
	        android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:layout_marginRight="1dp"
			android:text="@string/query"/>
		
	</LinearLayout>
    
	<LinearLayout 
	    android:id="@+id/tasked_ll_listview"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent" 
	    android:orientation="vertical"
	    android:layout_above="@id/tasked_ll"
	    android:layout_below="@id/tasked_tv_title"
	    android:layout_margin="5dp">
	    
	    <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content">
	    	
	        <TextView 
	            style="@style/TextViewBackGroundLeft"
		   		android:layout_width="fill_parent"
		   		android:layout_weight="1"
		   		android:layout_height="35dp"
		   		android:text="@string/task_date"
		   		android:layout_gravity="center"
		   	    android:gravity="center" />
	        
	        <TextView 
	  		    android:background="#9EA7B3"
		   		android:layout_width="fill_parent"
		   		android:layout_weight="1"
		   		android:layout_height="35dp"
		   		android:text="@string/plate"
		   		android:layout_gravity="center"
		   	    android:gravity="center" />
	        
	        <TextView 
	  		    android:background="#9EA7B3"
		   		android:layout_width="fill_parent"
		   		android:layout_weight="1"
		   		android:layout_height="35dp"
		   		android:text="@string/task_kind"
		   		android:layout_gravity="center"
		   	    android:gravity="center" />
	        
	        <TextView 
	  		    style="@style/TextViewBackGroundRight"
		   		android:layout_width="fill_parent"
		   		android:layout_weight="1"
		   		android:layout_height="35dp"
		   		android:text="@string/sample_number"
		   		android:layout_gravity="center"
		   	    android:gravity="center" />
	        
	    </LinearLayout>
	    
		<ListView 
		    android:id="@+id/tasked_lv"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content">
		</ListView>
	</LinearLayout>
	
</RelativeLayout>