<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/background">
    
    <LinearLayout
        android:id="@+id/register_sample_ll_bottom"
    	android:layout_alignParentBottom="true"
        android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_margin="5dp">
        
	    <Button 
	        style="@style/CornerButton"
	        android:id="@+id/register_sample_btn_register"
	        android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="10"
			android:layout_marginRight="1dp"
			android:text="@string/register_sample"/>
	    
		<Button 
		    style="@style/CornerButton"
		    android:id="@+id/register_sample_btn_cancel"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="10"
		    android:layout_marginLeft="1dp"
		    android:text="@string/Cancel"/>
			
    </LinearLayout>
    
        
    <TextView
        android:id="@+id/register_sample_tv_title"
        android:layout_alignParentTop="true"
        style="@style/TextViewTitle"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/register_sample"/>
    
    <LinearLayout
        android:layout_below="@id/register_sample_tv_title"
        android:layout_above="@id/register_sample_ll_bottom"
        android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:orientation="vertical">
		
        <LinearLayout
	        android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_margin="10dp">
	    
		    <TextView 
		      	android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/create_date" 
			    android:layout_margin="3dp"/>
		    <EditText
		        android:id="@+id/register_sample_et_create_date"
		      	android:layout_width="200dp"
			    android:layout_height="wrap_content"
			    style="@style/EditTextBackGround"
			    android:layout_margin="3dp"
			    android:editable="false"/>
		</LinearLayout>
		
        <LinearLayout
	        android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_margin="10dp">
	    
		    <TextView 
		      	android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/enroll_number" 
			    android:layout_margin="3dp"/>
		    <TextView
		        android:id="@+id/register_sample_tv_enroll_number"
		        style="@style/TextViewBackGround"
		      	android:layout_width="200dp"
			    android:layout_height="wrap_content"
			    android:layout_margin="3dp"/>
		</LinearLayout>
		
        <LinearLayout
	        android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_margin="10dp">
	    
		    <TextView 
		      	android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/owner_name" 
			    android:layout_margin="3dp"/>
		    <TextView
		        android:id="@+id/register_sample_tv_goods_owner"
		        style="@style/TextViewBackGround"
		      	android:layout_width="200dp"
			    android:layout_height="wrap_content"
			    android:layout_margin="3dp"/>
		</LinearLayout>
		
        <LinearLayout
	        android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_margin="10dp">
	    
		    <TextView 
		      	android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/vehicle_plate" 
			    android:layout_margin="3dp"/>
		    <TextView
		        android:id="@+id/register_sample_tv_vehicle_plate"
		        style="@style/TextViewBackGround"
		      	android:layout_width="200dp"
			    android:layout_height="wrap_content"
			    android:layout_margin="3dp"/>
		</LinearLayout>
		
        <LinearLayout
	        android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_margin="10dp">
	    
		    <TextView 
		      	android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/sample_type" 
			    android:layout_margin="3dp"/>
		    <TextView
		        android:id="@+id/register_sample_tv_sample_type"
		      	android:layout_width="200dp"
			    android:layout_height="wrap_content"
			    style="@style/TextViewBackGround"
			    android:layout_margin="3dp"/>
		</LinearLayout>
		
        <LinearLayout
	        android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_margin="10dp">
	    
		    <TextView 
		      	android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/sample_count"
			    android:layout_margin="3dp"
			    android:layout_gravity="center"/>
		    
		    <LinearLayout 
		        android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:layout_margin="3dp">
				
			    <Button 
			        android:id="@+id/register_sample_btn_sub"
			        android:layout_width="35dp"
					android:layout_height="35dp"
					android:text="-"
					android:layout_marginRight="1dp"/>
			    <EditText
			        android:id="@+id/register_sample_et_sample_count"
			      	android:layout_width="130dp"
				    android:layout_height="35dp"
				    style="@style/EditTextBackGround"
				    android:inputType="number"
				    android:text="1"/>
			    <Button 
			        android:id="@+id/register_sample_btn_add"
			        android:layout_width="35dp"
					android:layout_height="35dp"
					android:text="+"
					android:layout_marginLeft="1dp"/>
		    </LinearLayout>
		</LinearLayout>
    </LinearLayout>
</RelativeLayout>